Fix CI Dockerfile